IGNITE-17267 wip